Better grouping logic from things!
