# app/Http/Controllers/Api/AppController.php
@@ -7,7 +7,9 @@ use App\Http\Controllers\Controller;
 use App\OpenApi\App\AboutResponse;
 use App\OpenApi\ErrorResponse;
 use Carbon\Carbon;
+use Hexbatch\Things\Enums\TypeOfHookMode;
 use Hexbatch\Things\Models\Thing;
+use Hexbatch\Things\Models\ThingHook;
 use Illuminate\Http\JsonResponse;
 use OpenApi\Attributes as OA;
 use OpenApi\Attributes\JsonContent;
